// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computePullRequestClosedMetrics 1`] = `
{
  "series": [
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.total",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.since_opened_seconds",
      "points": [
        [
          1557933678,
          45,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "gauge",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.commits",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.changed_files",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.additions",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.deletions",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
  ],
}
`;

exports[`computePullRequestClosedMetricsWithQuery 1`] = `
{
  "series": [
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.total",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.since_opened_seconds",
      "points": [
        [
          1557933678,
          45,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "gauge",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.commits",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.changed_files",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.additions",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.deletions",
      "points": [
        [
          1557933678,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.since_first_authored_seconds",
      "points": [
        [
          1557933678,
          1267,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "gauge",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_closed.since_first_committed_seconds",
      "points": [
        [
          1557933678,
          596,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
        "merged:false",
        "label:bug",
      ],
      "type": "gauge",
    },
  ],
}
`;

exports[`computePullRequestOpenedMetrics 1`] = `
{
  "series": [
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_opened.total",
      "points": [
        [
          1557933633,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_opened.commits",
      "points": [
        [
          1557933633,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_opened.changed_files",
      "points": [
        [
          1557933633,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_opened.additions",
      "points": [
        [
          1557933633,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
      ],
      "type": "count",
    },
    {
      "host": "github.com",
      "metric": "github.actions.pull_request_opened.deletions",
      "points": [
        [
          1557933633,
          1,
        ],
      ],
      "tags": [
        "repository_owner:Codertocat",
        "repository_name:Hello-World",
        "sender:Codertocat",
        "sender_type:User",
        "user:Codertocat",
        "pull_request_number:2",
        "draft:false",
        "base_ref:master",
        "head_ref:changes",
      ],
      "type": "count",
    },
  ],
}
`;
